Corrected positioning of the paragraph and image elements in the top container.;On desktop and tablet devices, there’s a two column layout with text on left and image on right; on mobile devices, there’s a one column layout with image on top and text beneath it.

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 p {
 	font-size: 1.25em;
 	margin-bottom: 1.5em;
-	font-color: #4a4a4a;
+	color: #4a4a4a;
 	font-weight: 300;
 }
 
@@ -54,7 +54,16 @@ a {
 ul.main-nav {
 	padding-left: 0;
 	list-style: none;
-	float: right;
+}
+.name,
+.main-nav,
+.main-nav li {
+	display: block;
+	background:none;
+}
+ul.footer-nav {
+  display: inline-block;
+  list-style: none;
 }
 
 .name,
@@ -86,15 +95,15 @@ ul.main-nav {
 
 .footer-name,
 .footer-nav li {
-	text-align: center;
+	/*text-align: center;*/
 	margin-top: 6px;
 	margin-bottom: 6px;
-	float: right;
+	float: left;
 }
 
 .footer-name,
 .footer-nav a {
-	padding: 10px 15px;
+	padding: 10px 10px;
 	text-align: center;
 	display: block;
 }
@@ -104,12 +113,14 @@ ul.main-nav {
 .container {
 	padding-left: 1em;
 	padding-right: 1em;
+	text-align: center;
 }
 .main-header {
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
 	background: #fafafa;
 	margin-bottom: 30px;
+	text-align: center;
 }
 
 .main-footer {
@@ -128,8 +139,11 @@ ul.main-nav {
 .one {
 	background: #fafafa;
 }
-img {
-	max-width: 80%;
+.img {
+	width: 100%;
+	margin-top: 5px;
+	margin-bottom: 25px;
+	padding: 10px;
 }
 .three {
 	text-align: center;
@@ -139,7 +153,7 @@ img {
   Media Queries
 ==================================== */
 
-@media (min-width: 789px) {
+@media (min-width: 769px) {
 
 	.wrap {
 		min-height: calc(100vh - 89px);
@@ -188,23 +202,28 @@ img {
 		/*background: rgba(217, 228, 234, 0.5);*/
 	}
 	.col-6 {
-		display: inline-block;
 		width: 50%;
 		margin-right: -4px;
 		vertical-align: top;
 		padding-left: 1em;
 		padding-right: 1em;
 	}
-
-	img {
-		max-width: fill-available;
+	.primary {
+		float: right;
 	}
-
+	.secondary {
+		float: left;
+	}
+	.img {
+		width: 100%;
+	  margin-top: 5px;
+	  margin-bottom: 25px;
+	  padding: 10px;
+	}
 	.three {
 		text-align: center;
 		background: #fafafa;
 	}
-
 	.footer-name {
 		float:left;
 	}
@@ -213,7 +232,6 @@ img {
 		list-style:none;
 		text-transform: uppercase;
 	}
-
 	.clearfix::after {
 		content: "";
 		display: table;
